[tool.poetry]
name = "ai-generator"
version = "0.1.0"
description = ""
authors = ["Nikita Gabbasov <copyleft@sosus.org>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b6", allow-prereleases = true}
edgedb = "^1.2.0"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.225"
black = "^22.12.0"
pre-commit = "^2.21.0"
mypy = "^0.991"

[tool.ruff]
line-length = 79
src = ["app"]
select = ["ALL"]
ignore = []
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
