[tool.poetry]
name = "some-bot"
version = "0.1.0"
description = ""
authors = ["First Second <any@mail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
edgedb = "^1.3.0"
pydantic = "^1.10.7"
sentry-sdk = "^1.17.0"
babel = "^2.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
black = "^23.1.0"
pre-commit = "^3.2.1"
mypy = "^1.1"

[tool.ruff]
line-length = 79
src = ["app"]
select = ["ALL"]
ignore = [
    "D203",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107"
]
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
