[tool.poetry]
name = "some-bot"
version = "0.1.0"
description = ""
authors = ["First Second <any@mail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.1.1", allow-prereleases = true}
edgedb = "^1.9.0"
pydantic = "^2.3.0"
sentry-sdk = "^1.43.0"
babel = "^2.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
black = "^24.2.0"
pre-commit = "^3.6.2"
mypy = "^1.9.0"

[tool.ruff]
line-length = 79
src = ["app"]
select = ["ALL"]
ignore = [
    "D203",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D213",
    "RUF012"
]
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 79

[tool.mypy]
plugins = "pydantic.mypy"
python_version = 3.11
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
